--- a/js/heat.html
+++ b/js/heat.html
@@ -10,14 +10,14 @@
         function on_load()
         {
             socket = io.connect("http://localhost:8124");
-            socket.on("data",function(data)
+            socket.on("data",function(json_data)
 	    {
-		console.log("Got Data:-", data);
+		console.log("Got Data:-", json_data);
+		var data = JSON.parse(json_data);
+	    	heat_map.fill(data);
             });
 	    var canvas = document.getElementById("grid");
 	    heat_map.init(canvas, 400,400,4,4);
-	    data = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16];
-	    heat_map.fill(data);
         }
 
         function on_unload()
